--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header"><h1>Library</h1></div>
+        <div class="header"><h1>Secret Library</h1></div>
         <div class="buttons">
             <button id="new_book">New Book</button>
         </div>
@@ -31,6 +31,9 @@
                     <button type="submit" onclick="event.preventDefault();addBook();">Add Book</button>
                 </form>
             </div>
+        </div>
+        <div class="footer">
+            <a href='https://github.com/seanghods' target=”_blank”> Sean Ghods <img src='./images/github-mark.png'></a>
         </div>
     </div>
 </body>
